--- a/components/header.html
+++ b/components/header.html
@@ -110,25 +110,23 @@
                                 <a href="">
 
                                     <div class="button_title">
-                                        <h5>Cuisiner au fil des saisons</h5>
+                                        <h5>cuisiner au fil des saisons</h5>
                                         <div class="boutton_underline"></div>
                                     </div>
                                 </a>
                             </button>
                             <button>
                                 <a href="">
-
                                     <div class="button_title">
-                                        <h5>Carte des produits</h5>
+                                        <h5>carte des produits</h5>
                                         <div class="boutton_underline"></div>
                                     </div>
                                 </a>
                             </button>
                             <button>
                                 <a href="">
-
                                     <div class="button_title">
-                                        <h5>Anatomie des viandes</h5>
+                                        <h5>anatomie des viandes</h5>
                                         <div class="boutton_underline"></div>
                                     </div>
                                 </a>
@@ -141,16 +139,18 @@
 
                     <div class="header__nav_menu-container">
                         <button class="container_title">
-                            <div class="button_title">
-                                <h3>espace personnel</h3>
-                                <div class="boutton_underline"></div>
-                            </div>
+                            <a href="/espace_personnel.html">
+                                <div class="button_title">
+                                    <h3>espace personnel</h3>
+                                    <div class="boutton_underline"></div>
+                                </div>
+                            </a>
                         </button>
                         <div class="Menu_categorie">
                             <button>
                                 <a href="">
                                     <div class="button_title">
-                                        <h5>Panificateur de menu</h5>
+                                        <h5>panificateur de menu</h5>
                                         <div class="boutton_underline"></div>
                                     </div>
                                 </a>
