Update a priori FONCTIONELLE pour add et get favory

--- a/css/styles.css
+++ b/css/styles.css
@@ -906,3 +906,14 @@ width: 500px;
 
     }
 }
+
+
+@keyframes fadeout {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+}
