--- a/components/header.html
+++ b/components/header.html
@@ -3,7 +3,7 @@
     <div class="header__container">
         <div class="header__logo">
             <div class="user-logo">
-                <a href="/recettes" id="userLogoLink">
+                <a id="userLogoLink">
                     <img src="/assets/images/logos_orpps/user_logo_hat.png" alt="User Logo Hat" class="user-logo__hat">
                     <img src="/assets/images/logos_orpps/user_logo_mustache.png" alt="User Logo Mustache"
                         class="user-logo__mustache">
@@ -135,8 +135,50 @@
 
                     </div>
                 </div>
-                <div class="header__nav_container" id="user_menu_container">
+                <div class="header__nav_container" id="about_menu_container">
 
+                    <div class="header__nav_menu-container">
+                        <button class="container_title">
+                            <a>
+                                <div class="button_title">
+                                    <h3>À propos</h3>
+                                    <div class="boutton_underline"></div>
+                                </div>
+                            </a>
+                        </button>
+                        <div class="Menu_categorie">
+                            <button>
+                                <a href="">
+                                    <div class="button_title">
+                                        <h5>panificateur de menu</h5>
+                                        <div class="boutton_underline"></div>
+                                    </div>
+                                </a>
+                            </button>
+                            <button>
+                                <a href="">
+                                    <div class="button_title">
+                                        <h5>liste de course</h5>
+                                        <div class="boutton_underline"></div>
+                                    </div>
+                                </a>
+                            </button>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+  
+
+<div id="overlayUser" class="header__overlay">
+    <div class="overlay-content">
+        <div class="header__nav">
+            <div class="header__nav_menus">
+                <div class="header__nav_container" id="user_menu_container">
                     <div class="header__nav_menu-container">
                         <button class="container_title">
                             <a href="/espace_personnel.html">
@@ -162,18 +204,15 @@
                                         <div class="boutton_underline"></div>
                                     </div>
                                 </a>
-                            </button>
-                            
+                            </button>                         
                         </div>
                         <secondary-button  id="login-button" text="se connecter" style="padding: 30px 0 0 0;">
                             <svg width="64px" height="64px" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M8 7C9.65685 7 11 5.65685 11 4C11 2.34315 9.65685 1 8 1C6.34315 1 5 2.34315 5 4C5 5.65685 6.34315 7 8 7Z" fill="#CB6863"></path> <path d="M14 12C14 10.3431 12.6569 9 11 9H5C3.34315 9 2 10.3431 2 12V15H14V12Z" fill="#CB6863"></path> </g></svg>
                         </secondary-button>
+                        
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-  
-
