--- a/components/header.html
+++ b/components/header.html
@@ -150,7 +150,7 @@
                             <button>
                                 <a href="">
                                     <div class="button_title">
-                                        <h5>panificateur de menu</h5>
+                                        <h5>contact</h5>
                                         <div class="boutton_underline"></div>
                                     </div>
                                 </a>
@@ -158,7 +158,7 @@
                             <button>
                                 <a href="">
                                     <div class="button_title">
-                                        <h5>liste de course</h5>
+                                        <h5>politique de confidentialité</h5>
                                         <div class="boutton_underline"></div>
                                     </div>
                                 </a>
@@ -178,6 +178,9 @@
     <div class="overlay-content">
         <div class="header__nav">
             <div class="header__nav_menus">
+
+ 
+
                 <div class="header__nav_container" id="user_menu_container">
                     <div class="header__nav_menu-container">
                         <button class="container_title">
@@ -192,7 +195,15 @@
                             <button>
                                 <a href="">
                                     <div class="button_title">
-                                        <h5>panificateur de menu</h5>
+                                        <h5>recettes favorites</h5>
+                                        <div class="boutton_underline"></div>
+                                    </div>
+                                </a>
+                            </button>
+                            <button>
+                                <a href="">
+                                    <div class="button_title">
+                                        <h5>planificateur de menu</h5>
                                         <div class="boutton_underline"></div>
                                     </div>
                                 </a>
@@ -204,12 +215,51 @@
                                         <div class="boutton_underline"></div>
                                     </div>
                                 </a>
-                            </button>                         
+                            </button>
+                            
                         </div>
+
+
                         <secondary-button  id="login-button" text="se connecter" style="padding: 30px 0 0 0;">
-                            <svg width="64px" height="64px" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M8 7C9.65685 7 11 5.65685 11 4C11 2.34315 9.65685 1 8 1C6.34315 1 5 2.34315 5 4C5 5.65685 6.34315 7 8 7Z" fill="#CB6863"></path> <path d="M14 12C14 10.3431 12.6569 9 11 9H5C3.34315 9 2 10.3431 2 12V15H14V12Z" fill="#CB6863"></path> </g></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 64 64">
+                                <defs>
+                                  <style>
+                                    .cls-1 {
+                                      fill: #cb6863;
+                                    }
+                                  </style>
+                                </defs>
+                                <!-- Generator: Adobe Illustrator 28.6.0, SVG Export Plug-In . SVG Version: 1.2.0 Build 709)  -->
+                                <g>
+                                  <g id="Calque_1">
+                                    <g id="SVGRepo_iconCarrier">
+                                      <path class="cls-1" d="M50.7,58.7c-1.5,0-2.7-1.2-2.7-2.7,0-8.8-7.2-16-16-16s-16,7.2-16,16-1.2,2.7-2.7,2.7-2.7-1.2-2.7-2.7c0-11.8,9.6-21.3,21.3-21.3s21.3,9.6,21.3,21.3-1.2,2.7-2.7,2.7ZM32,32c-7.4,0-13.3-6-13.3-13.3s6-13.3,13.3-13.3,13.3,6,13.3,13.3-6,13.3-13.3,13.3ZM32,10.7c-4.4,0-8,3.6-8,8s3.6,8,8,8,8-3.6,8-8-3.6-8-8-8Z"/>
+                                    </g>
+                                  </g>
+                                </g>
+                            </svg>
                         </secondary-button>
                         
+                        <primary-button  id="logout-button" text="se déconnecter" style="padding: 30px 0 0 0;">
+                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 64 64">
+                                <defs>
+                                  <style>
+                                    .cls-1 {
+                                      fill: #fff;
+                                    }
+                                  </style>
+                                </defs>
+                                <!-- Generator: Adobe Illustrator 28.6.0, SVG Export Plug-In . SVG Version: 1.2.0 Build 709)  -->
+                                <g>
+                                  <g id="Calque_1">
+                                    <g id="SVGRepo_iconCarrier">
+                                      <path class="cls-1" d="M10.7,58.7c-1.5,0-2.7-1.2-2.7-2.7,0-11.8,9.6-21.3,21.3-21.3s2.7,1.2,2.7,2.7-1.2,2.7-2.7,2.7c-8.8,0-16,7.2-16,16s-1.2,2.7-2.7,2.7ZM53.3,58.7c-.7,0-1.4-.3-1.9-.8l-4.8-4.8-4.8,4.8c-1,1-2.7,1-3.8,0-1-1-1-2.7,0-3.8l4.8-4.8-4.8-4.8c-1-1-1-2.7,0-3.8,1-1,2.7-1,3.8,0l4.8,4.8,4.8-4.8c1-1,2.7-1,3.8,0,1,1,1,2.7,0,3.8l-4.8,4.8,4.8,4.8c1,1,1,2.7,0,3.8-.5.5-1.2.8-1.9.8ZM29.3,32c-7.4,0-13.3-6-13.3-13.3s6-13.3,13.3-13.3,13.3,6,13.3,13.3-6,13.3-13.3,13.3ZM29.3,10.7c-4.4,0-8,3.6-8,8s3.6,8,8,8,8-3.6,8-8-3.6-8-8-8Z"/>
+                                    </g>
+                                  </g>
+                                </g>
+                            </svg>
+                        </primary-button>
+
                     </div>
                 </div>
             </div>
