--- a/components/header.html
+++ b/components/header.html
@@ -240,7 +240,7 @@
                             </svg>
                         </secondary-button>
                         
-                        <primary-button  id="logout-button" text="se déconnecter" style="padding: 30px 0 0 0;">
+                        <primary-button href="#"  id="logout-button" text="se déconnecter" style="padding: 30px 0 0 0;">
                             <svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 64 64">
                                 <defs>
                                   <style>
