ajout de la feature recettes favorites

--- a/components/header.html
+++ b/components/header.html
@@ -193,7 +193,7 @@
                         </button>
                         <div class="Menu_categorie">
                             <button>
-                                <a href="">
+                                <a href="/Recettes-favorites.html">
                                     <div class="button_title">
                                         <h5>recettes favorites</h5>
                                         <div class="boutton_underline"></div>
