add pages planificateur & liste de course

--- a/components/header.html
+++ b/components/header.html
@@ -201,7 +201,7 @@
                                 </a>
                             </button>
                             <button>
-                                <a href="">
+                                <a href="planificateur_de_menu.html">
                                     <div class="button_title">
                                         <h5>planificateur de menu</h5>
                                         <div class="boutton_underline"></div>
@@ -209,7 +209,7 @@
                                 </a>
                             </button>
                             <button>
-                                <a href="">
+                                <a href="liste_de_course.html">
                                     <div class="button_title">
                                         <h5>liste de course</h5>
                                         <div class="boutton_underline"></div>
