--- a/css/planificateur_de_menu.css
+++ b/css/planificateur_de_menu.css
@@ -112,12 +112,26 @@
 .event_meals {
     display: flex;
     flex-direction: column;
-    align-items: start;
-    justify-content: space-between;
-    gap: 15px;
+    gap: 15px; /* Espacement entre les éléments */
+    align-items: flex-start; /* Aligne les éléments au début de chaque colonne */
     width: 100%;
 }
+.mealItem_byDate {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.mealDate {
+    margin-left: 15px;
+}
+.mealItems-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    gap: 15px;
+}
 .mealItem_container {
+    margin-bottom: 15px; /* Espacement entre les lignes */
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -131,6 +145,10 @@
     display: flex;
     width: 100%;
     justify-content: space-between;
+}
+.mealTitle{
+    margin: 10px 0;
+    color: #696969;
 }
 .addMeal {
     background-color: transparent;
@@ -217,20 +235,38 @@
 }
 .input_menuCategories {
     display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+}
+.input_menuCategorie {
+    display: flex;
+    flex-direction: column;
+}
+.input_menuCategorie label {
+    display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     gap: 15px;
+}
+.input_menuCategorie h4 {
+    margin: 0 ;
+}
+.menuCategorie_inputsButtons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    margin: 10px 0;
 }
 .modal_buttons {
     padding: 15px 0 30px 0;
 }
 
 
-.mealTitle{
-    margin: 10px 0;
-}
+
 .menuCategorie_title {
     margin: 10px 0;
+    text-transform: uppercase;
 }
 
 
@@ -250,3 +286,115 @@
     color: #cb6863;
     border: 1px dashed #cb6863;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.modal-fullscreen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    z-index: 9999;
+    overflow-y: auto;
+}
+
+.modal-content {
+    background: #fff;
+    color: #333;
+    width: 90%;
+    max-width: 1200px;
+    margin: 20px auto;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    position: relative;
+}
+
+.modal_Title {
+    font-size: 2rem;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.modal-close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 2rem;
+    background: none;
+    border: none;
+    color: #333;
+    cursor: pointer;
+}
+
+
+.recipeInput {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #f9f9f9;
+    border: 1px dashed #ddd;
+    border-radius: 50px;
+    padding: 5px 10px;
+    margin: 5px 0;
+}
+
+.recipeInput p {
+    margin: 0;
+    font-size: 14px;
+    flex-grow: 1;
+    text-align: left;
+}
+
+.remove_recipeInput {
+    color: #696969;
+    width: 24px;
+    height: 24px;
+    border: none;
+    background: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.remove_recipeInput:hover {
+    color: #cb6863;
+}
+
+.meal_menu {
+    margin-bottom: 15px;
+}
+.recipeTitle {
+    margin: 0;
+}
+
+
