meals sort by date & by mealtype

--- a/css/planificateur_de_menu.css
+++ b/css/planificateur_de_menu.css
@@ -116,7 +116,7 @@
     align-items: flex-start; /* Aligne les éléments au début de chaque colonne */
     width: 100%;
 }
-.mealItem_byDate {
+.mealItems_byDate {
     display: flex;
     flex-direction: column;
     width: 100%;
